--- a/api_cheems/requirements.txt
+++ b/api_cheems/requirements.txt
@@ -15,3 +15,8 @@ PyYAML==6.0.2
 sqlparse==0.5.3
 uritemplate==4.1.1 
 python-dotenv==1.0.1
+django-ratelimit==4.1.0
+django-axes==6.3.0
+django-sslserver==0.22
+cryptography==42.0.5
+django-honeypot==1.0.3
